--- a/index.html
+++ b/index.html
@@ -1,1 +1,153 @@
-<!DOCTYPE html><html lang="ko"><head><meta charset="UTF-8"><title>AI Tool</title></head><body><h1>우리만의 AI 도구</h1></body></html>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <title>우리만의 AI 도구</title>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <style>
+    body {
+      margin: 0;
+      background: #121212;
+      color: #ffffff;
+      font-family: 'Segoe UI', sans-serif;
+    }
+    header {
+      background-color: #1f1f1f;
+      padding: 20px;
+      font-size: 24px;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .tool-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      gap: 20px;
+      padding: 20px;
+    }
+    .tool-box {
+      background-color: #1a1a1a;
+      padding: 20px;
+      border-radius: 12px;
+      border: 1px solid #333;
+      transition: transform 0.2s;
+    }
+    .tool-box:hover {
+      transform: scale(1.02);
+    }
+    .caption {
+      margin-top: 8px;
+      font-size: 14px;
+      color: #ccc;
+    }
+  </style>
+</head>
+<body>
+<header>
+  <div>우리만의 AI 도구</div>
+  <div>
+    <span id="welcomeUser"></span>
+    <button onclick="toggleAuthPopup()" style="padding: 6px 12px; font-size: 14px;">🔐 로그인</button>
+    <button onclick="logoutUser()" style="padding: 6px 12px; font-size: 14px; background:#444; color:#fff;">🚪 로그아웃</button>
+  </div>
+</header>
+<div class="tool-container" id="tools" style="display: none;">
+  <div class="tool-box">
+    <h3>이미지 생성</h3>
+    <img src="https://via.placeholder.com/300x180?text=스타일+프리셋" width="100%">
+    <div class="caption">추천 프리셋 기반 이미지</div>
+  </div>
+  <div class="tool-box">
+    <h3>비디오 생성</h3>
+    <img src="https://via.placeholder.com/300x180?text=AI+비디오+프레임" width="100%">
+    <div class="caption">스타일 적용된 영상 프레임</div>
+  </div>
+</div>
+<div id="auth" style="padding: 40px; max-width: 400px; margin: 60px auto; background: #1a1a1a; border-radius: 12px; display: none;">
+  <h2>🔐 로그인</h2>
+  <input id="email" type="email" placeholder="이메일 입력">
+  <input id="password" type="password" placeholder="비밀번호 입력">
+  <button onclick="loginUser()">로그인</button>
+  <button onclick="registerUser()" style="background:#555; color:#fff; margin-top: 10px;">회원가입</button>
+  <div id="g_id_onload"
+     data-client_id="YOUR_GOOGLE_CLIENT_ID"
+     data-context="signin"
+     data-ux_mode="popup"
+     data-callback="onGoogleSignIn"
+     data-auto_prompt="false">
+  </div>
+  <div class="g_id_signin"
+     data-type="standard"
+     data-shape="rectangular"
+     data-theme="outline"
+     data-text="signin_with"
+     data-size="large"
+     data-logo_alignment="left">
+  </div>
+</div>
+<script>
+function loginUser() {
+  const email = document.getElementById('email').value;
+  const password = document.getElementById('password').value;
+  const users = JSON.parse(localStorage.getItem('users') || '{}');
+  if (users[email] && users[email].password === password) {
+    localStorage.setItem('currentUser', email);
+    alert('✅ 로그인 성공');
+    location.reload();
+  } else {
+    alert('❌ 로그인 실패. 회원가입 먼저 해주세요.');
+  }
+}
+function registerUser() {
+  const email = document.getElementById('email').value;
+  const password = document.getElementById('password').value;
+  const users = JSON.parse(localStorage.getItem('users') || '{}');
+  if (users[email]) {
+    alert('이미 등록된 사용자입니다.');
+  } else {
+    users[email] = { password };
+    localStorage.setItem('users', JSON.stringify(users));
+    alert('🎉 회원가입 성공! 이제 로그인해주세요.');
+  }
+}
+function onGoogleSignIn(response) {
+  const decoded = parseJwt(response.credential);
+  localStorage.setItem('currentUser', decoded.email);
+  alert(`✅ 구글 로그인 성공: ${decoded.email}`);
+  location.reload();
+}
+function parseJwt(token) {
+  var base64Url = token.split('.')[1];
+  var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+  var jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
+    return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+  }).join(''));
+  return JSON.parse(jsonPayload);
+}
+function toggleAuthPopup() {
+  const authBox = document.getElementById('auth');
+  authBox.style.display = authBox.style.display === 'block' ? 'none' : 'block';
+}
+function logoutUser() {
+  localStorage.removeItem('currentUser');
+  alert('👋 로그아웃 되었습니다');
+  location.reload();
+}
+</script>
+<script>
+window.addEventListener('DOMContentLoaded', () => {
+  const currentUser = localStorage.getItem('currentUser');
+  if (currentUser) {
+    document.getElementById('auth').style.display = 'none';
+    document.getElementById('tools').style.display = 'grid';
+    document.getElementById('welcomeUser').innerText = `${currentUser}님 환영합니다 👋`;
+  } else {
+    document.getElementById('auth').style.display = 'none';
+    document.getElementById('tools').style.display = 'grid';
+    document.getElementById('welcomeUser').innerText = '';
+  }
+});
+</script>
+</body>
+</html>
