--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>우리만의 AI 도구</title>
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <style>
     body {
       margin: 0;
@@ -41,6 +40,10 @@
       font-size: 14px;
       color: #ccc;
     }
+    img.preview {
+      width: 100%;
+      border-radius: 8px;
+    }
   </style>
 </head>
 <body>
@@ -55,36 +58,21 @@
 <div class="tool-container" id="tools" style="display: none;">
   <div class="tool-box">
     <h3>이미지 생성</h3>
-    <img src="https://via.placeholder.com/300x180?text=스타일+프리셋" width="100%">
+    <img src="https://via.placeholder.com/400x200?text=프리셋+이미지" class="preview" alt="프리셋 이미지">
     <div class="caption">추천 프리셋 기반 이미지</div>
   </div>
   <div class="tool-box">
     <h3>비디오 생성</h3>
-    <img src="https://via.placeholder.com/300x180?text=AI+비디오+프레임" width="100%">
+    <img src="https://via.placeholder.com/400x200?text=AI+비디오+프레임" class="preview" alt="AI 비디오 프레임">
     <div class="caption">스타일 적용된 영상 프레임</div>
   </div>
 </div>
-<div id="auth" style="padding: 40px; max-width: 400px; margin: 60px auto; background: #1a1a1a; border-radius: 12px; display: none;">
+<div id="auth" style="padding: 40px; max-width: 400px; margin: 60px auto; background: #1a1a1a; border-radius: 12px;">
   <h2>🔐 로그인</h2>
   <input id="email" type="email" placeholder="이메일 입력">
   <input id="password" type="password" placeholder="비밀번호 입력">
   <button onclick="loginUser()">로그인</button>
   <button onclick="registerUser()" style="background:#555; color:#fff; margin-top: 10px;">회원가입</button>
-  <div id="g_id_onload"
-     data-client_id="YOUR_GOOGLE_CLIENT_ID"
-     data-context="signin"
-     data-ux_mode="popup"
-     data-callback="onGoogleSignIn"
-     data-auto_prompt="false">
-  </div>
-  <div class="g_id_signin"
-     data-type="standard"
-     data-shape="rectangular"
-     data-theme="outline"
-     data-text="signin_with"
-     data-size="large"
-     data-logo_alignment="left">
-  </div>
 </div>
 <script>
 function loginUser() {
@@ -111,28 +99,13 @@ function registerUser() {
     alert('🎉 회원가입 성공! 이제 로그인해주세요.');
   }
 }
-function onGoogleSignIn(response) {
-  const decoded = parseJwt(response.credential);
-  localStorage.setItem('currentUser', decoded.email);
-  alert(`✅ 구글 로그인 성공: ${decoded.email}`);
-  location.reload();
-}
-function parseJwt(token) {
-  var base64Url = token.split('.')[1];
-  var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-  var jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
-    return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
-  }).join(''));
-  return JSON.parse(jsonPayload);
-}
-function toggleAuthPopup() {
-  const authBox = document.getElementById('auth');
-  authBox.style.display = authBox.style.display === 'block' ? 'none' : 'block';
-}
 function logoutUser() {
   localStorage.removeItem('currentUser');
   alert('👋 로그아웃 되었습니다');
   location.reload();
+}
+function toggleAuthPopup() {
+  document.getElementById('auth').scrollIntoView({ behavior: 'smooth' });
 }
 </script>
 <script>
@@ -143,8 +116,8 @@ window.addEventListener('DOMContentLoaded', () => {
     document.getElementById('tools').style.display = 'grid';
     document.getElementById('welcomeUser').innerText = `${currentUser}님 환영합니다 👋`;
   } else {
-    document.getElementById('auth').style.display = 'none';
-    document.getElementById('tools').style.display = 'grid';
+    document.getElementById('auth').style.display = 'block';
+    document.getElementById('tools').style.display = 'none';
     document.getElementById('welcomeUser').innerText = '';
   }
 });
